refacto / cleeanup